<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="googleAnalyticsCode">UA-32745076-1</string>
    
    <string name="appName">MediaApp</string>
    <string name="menuSearch">Search</string>
    <string name="menuNews">News</string>
    <string name="menuContact">Contact</string>
    <string name="menuSettings">Settings</string>
    <string name="menuMail">Mail this page to me</string>    
    
    <string name="loginUser">Username:</string>
    <string name="loginUserHint">name.lastname@student.hu.nl</string>
    <string name="loginPass">Password:</string>
    <string name="loginPassHint">*****</string>
    <string name="loginRemember">Remember login</string>
    <string name="loginButton">Login</string>    
    
    <string name="searchLabel">LUCAS</string>
    <string name="searchHeader">Search on LUCAS:</string>
    <string name="searchTerm">[search term]</string>
    <string name="searchField">Search Field</string>    
    <string name="searchBySubject">Subject</string>
    <string name="searchByDatabase">Database</string>
    <string name="resultsNoResults">No results were found.</string>
    <string-array name="searchFieldArray">
        <item>Any</item>
        <item>Title</item>
        <item>Author</item>
        <item>Full Text</item>
        <item>Keyword</item>
        <item>Subject</item>
        <item>Abstract</item>
        <item>ISBN</item>
        <item>ISSN</item>
    </string-array>

    <string name="contactLabel">Contact</string>
    <string name="contactCall">Call</string>
    <string name="contactEmail">Email</string>
    <string name="contactLocation">Location</string>
    <string name="contactCallIntent">Call&#8230;</string>
    <string name="contactEmailIntent">Email&#8230;</string>
    <string name="contactLocationIntent">Show on map&#8230;</string>
    
    <string name="contactFCJ">FCJ</string>
    <string name="contactFCJ_call">088 481 35 83</string>
    <string name="contactFCJ_email">mediatheek.fcj@hu.nl</string>
    <string name="contactFCJ_location">Padualaan 99, Utrecht</string>
    
    <string name="contactFE">FE</string>
    <string name="contactFE_call">088 481 71 25</string>
    <string name="contactFE_email">mediatheek.fe@hu.nl</string>
    <string name="contactFE_location">Padualaan 97, Utrecht</string>
    
    <string name="contactFEM">FEM</string>
    <string name="contactFEM_call">088 481 64 33</string>
    <string name="contactFEM_email">mediatheek.fem@hu.nl</string>
    <string name="contactFEM_location">Padualaan 101, Utrecht</string>
    
    <string name="contactFG">FG</string>
    <string name="contactFG_call">088 481 51 59</string>
    <string name="contactFG_email">mediatheek.fg@hu.nl</string>
    <string name="contactFG_location">Bolognalaan 101, Utrecht</string>
    
    <string name="contactFMR">FMR</string>
    <string name="contactFMR_call">088 481 98 78</string>
    <string name="contactFMR_email">mediatheek.fmr@hu.nl</string>
    <string name="contactFMR_location">Heidelberglaan 7, Utrecht</string>
    
    <string name="contactFNTNN1">FNT Nijenoord 1</string>
    <string name="contactFNTNN1_call">088 481 81 88</string>
    <string name="contactFNTNN1_email">mediatheek.fnt@hu.nl</string>
    <string name="contactFNTNN1_location">Nijenoord 1, Utrecht</string>
    
    <string name="contactFNTILC">FNT/ILC F.C.Dondersstr. 65</string>
    <string name="contactFNTILC_call">088 481 88 61</string>
    <string name="contactFNTILC_email">mediatheek.ilc@hu.nl</string>
    <string name="contactFNTILC_location">F.C.Dondersstraat 65, Utrecht</string>
    
    <string name="contactHUAmers">HU Amersfoort</string>
    <string name="contactHUAmers_call">088 481 27 42</string>
    <string name="contactHUAmers_email">mediatheek.amersfoort@hu.nl</string>
    <string name="contactHUAmers_location">De Nieuwe Poort 21, Amersfoort</string>
    
    <string name="contactAlgemeen">Mediatheek General</string>
    <string name="contactAlgemeen_email">mediatheek@hu.nl</string>
    
    <string name="contactWebmaster">Webmaster</string>
    <string name="contactWebmaster_email">harold.bakker@hu.nl</string>
    
    <string name="newsLabel">News</string>
    
    <string name="settingsLabel">Settings</string>
    <string name="settingsStartupHeader">Choose a screen to show after login:</string>
    <string name="settingsSearch">LUCAS search</string>
    <string name="settingsContact">Contact information</string>
    <string name="settingsNews">News RSS feed</string>                              
    <string name="settingsAmountOfResultsHeader">Set the amount of results to show per page:</string>
    <string-array name="settingsAmountOfResultsArray">
        <item >25</item>
        <item >50</item>
        <item >75</item>
        <item >100</item>
    </string-array>
    <string name="settingsLogout">Logout</string>
    <string name="settingsShowSearchFieldHeader">Show search field option in LUCAS Search:</string>
    <string name="settingsCheckBoxShow">Show</string>
    
    <string name="dialogLoginUnsuccessful">Login was unsuccessful</string>    
    <string name="dialogLoggingIn">Logging in&#8230;</string>
    <string name="dialogLoadingResultDetail">Loading page&#8230;</string>
    <string name="dialogSearching">Searching&#8230;\nThis might take a while</string>
    <string name="dialogNoTerm">No search term was given</string>
    <string name="dialogNoDatabase">No database was selected</string>
    <string name="dialogComError">Communication Error</string><string name="dialogLoadingRSS">Loading RSS Feeds&#8230;</string><string name="dialogAboutTitle">About this app</string>
    <string name="dialogAboutText">This app was commissioned by the library of\n\t\tUniversity of applied sciences\n\t\tUtrecht - Hogeschool Utrecht\n\nCreated by the students of \nTechnische Informatica:\n\t\tMax Aalderink\n\t\tLars Hartmann\n\nVersion</string><string name="resultsLoadMore">Load more results</string>
    
            
</resources>
