<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SV"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" android:paddingLeft="5dp" android:paddingRight="5dp">

        <TextView
            android:id="@+id/TV0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settingsStartupHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/RBGStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" >

            <RadioButton
                android:id="@+id/RBSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/settingsSearch" />

            <RadioButton
                android:id="@+id/RBNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsNews" />

            <RadioButton
                android:id="@+id/RBContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsContact" />
        </RadioGroup>

        <TextView
            android:id="@+id/TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settingsAmountOfResultsHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/SAmountOfResults"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:entries="@array/settingsAmountOfResultsArray" />

        <TextView
            android:id="@+id/TV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Show search field option in LUCAS Search:"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/CBShowSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Show" 
            android:visibility="gone" />

        <Button
            android:id="@+id/BLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/settingsLogout" />
        
         <Button
             android:id="@+id/BAbout"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:text="@string/dialogAboutTitle" />

    </LinearLayout>

</ScrollView>